When the display of values is constrained with an autofilter, one cannot use dragging to autofill other cells without also affecting the cells the autofilter did hide. If you, say, hide several rows via Autofilter and then "drag-fill" data into cells that are still visible, hidden cells are overwritten as well. With Excel, those hidden fields are left untouched. Other examples / descriptions: <http://user.services.openoffice.org/en/forum/viewtopic.php?f=9&t=20725&start=0>; <http://www.theregister.co.uk/2009/07/16/openoffice_autofilter_bug_feature/>. Super annoying ...
[Reproducible] with "LibreOffice 3.3.2RC1 – WIN7 Home Premium (64bit) German UI [OOO330m19 (Build:201 / tag 3.3.2.1)]" Steps to reproduce: 1. open attached "sample10.ods" 2. Filter column d "<>b" (you can use special filter "filterdforb") rows 5:7 will beocme hidden 3. Click on 'A4' with the red "X" Cell cursor with little fill handle at the right bottom corner appears 4. Move mouse pointer to fill handle so that mouse pointer view changes 5. click and drag/drop fill handle to'A10' red border around fill area 'A4:A10' appears 6. release mouse button: Range within round border will be filled with red "X" 7. Menu 'Data > Filter > Remove Filter' to make hidden rows visible expected: hidden cells will not have been changed actual: also contain "X" That behavior differs from the one if you try 'Edit > Fill > down' starting with step 4, that function will not be available to protect the hidden cells. OOo: Bug 104473 - Cells hidden by using AutoFilter are overwritten by using copy with fill handle <http://openoffice.org/bugzilla/show_bug.cgi?id=104473> what is a DUP of Bug 89232 - Fill operations should not touch filtered rows <http://openoffice.org/bugzilla/show_bug.cgi?id=89232> <http://openoffice.org/bugzilla/show_bug.cgi?id=89232> @stgries: Your LibO version is? @Katarina Is this problem already on the schedule?
Created attachment 44494 [details] See Comment 1
*** Bug 35403 has been marked as a duplicate of this bug. ***
Solved in OpenOffice (see comment 27): http://openoffice.org/bugzilla/show_bug.cgi?id=89232#c27 It's a really annoying problem. Would be great having it solved on 3.4.
Allright, I've extracted relevant parts of that CWS and put it into 3.4 branch. Let's call this fixed then
LibreOffice 3.4.0 DEV300m103 (Build:4) somthing going worse. now it delets hidden cells.
Win XP and Win 7 LibreOffice 3.4.0 OOO340m1 (Build:11) RC1 deletes hidden cells after using filter and pull down selected data for auto fill.
(In reply to comment #7) > Win XP and Win 7 > LibreOffice 3.4.0 OOO340m1 (Build:11) RC1 > > deletes hidden cells after using filter and pull down selected data for auto > fill. I am unable to reproduce this with LibreOffice 3.4.0 OOO340m1 (Build:11) RC1 on Windows XP. I use the steps from the comment #1. The result is that the cells A5..A6 include the values 4, 5, 6. The cells A4, A8..A10 include the red X. => everything works as expected. Alexei, do you use another steps?
I can reproduce in master build, unfortunately :( And it got worse somehow, as the values get incremented on drag-fill i.e. the cells are filled with XI, XII, I, ... (roman numerals) :( :(
Created attachment 47045 [details] steps to reproduce failure here my steps with filter in calc
Created attachment 47046 [details] Test document for the removed hidden cells; scenario from the comment #10 I am able to reproduce the scenario from the comment #10 as well with LO-3.4.0-rc1.
Allright folks, this is fixed, but for 3.4.1 only, didn't make 3.4.0 deadline