fdo#35345: Don't overwrite hidden cells in drag-fill operation

Also i#89232. Extracting relevant parts from 'calc66' CWS