sc/source/core/data/documen3.cxx
@@ -238,6 +238,14 @@ ScDBData* ScDocument::GetDBAtArea(SCTAB nTab, SCCOL nCol1, SCROW nRow1, SCCOL nC
         return NULL;
 }
 
+ScDBData* ScDocument::GetFilterDBAtTable(SCTAB nTab) const
+{
+    if (pDBCollection)
+        return pDBCollection->GetFilterDBAtTable(nTab);
+    else
+    return NULL;
+}
+
 ScDPCollection* ScDocument::GetDPCollection()
 {
     if (!pDPCollection)
